# opencode-usage-companion

./: BUG_REPORTS.md  Cargo.toml  PROJECT_DOCUMENTATION.md  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
src/: auth.rs  cli.rs  error.rs  lib.rs  main.rs
src/output/: json.rs  mod.rs  simple.rs  table.rs
src/providers/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
